fix(home): Adjust search bar and header z-index
Refines the styling of the home page's search bar by removing borders and rounding.
Updates the z-index of the sticky header to ensure it remains above other content during scrolling.

--- a/index.css
+++ b/index.css
@@ -914,7 +914,10 @@ h2.text-lg.sm\:text-xl.font-extrabold.text-slate-900.dark\:text-white.tracking-t
 }
 
 .home-page .home-search-bar {
+    border-width: 0;
+    border-radius: 0;
     padding-left: 6px;
+    border-top: solid 1px #ffffff0d;
 }
 
 .category-filter-container {
